--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name": "philippfrenzel/yii2fullcalendar",
+	"name": "paciliojoe/yii2fullcalendar3",
 	"description": "Yii2 fullcalendar Widgets",
 	"keywords": ["yii2", "fullcalendar","widget"],
-	"homepage": "http://www.frenzel.net/",
+	"homepage": "",
 	"type": "yii2-extension",
 	"license": "MIT",
 	"authors": [
@@ -10,6 +10,10 @@
 			"name": "Philipp Frenzel",
 			"email": "philipp@frenzel.net",
 			"homepage": "http://www.frenzel.net/",
+			"role": "Developer"
+		},
+		{
+			"name": "Joe Pacilio",
 			"role": "Developer"
 		}
 	],
@@ -19,9 +23,7 @@
 	"minimum-stability": "stable",
 	"require": {
 		"yiisoft/yii2" : "*",
-		"yiisoft/yii2-jui" : "*",
-		"bower-asset/fullcalendar" : "^3.8.1@stable",
-		"bower-asset/fullcalendar-scheduler" : "^1.9.4@stable"
+		"yiisoft/yii2-jui" : "*"
 	},
 	"require-dev": {
 		"codeception/codeception": "*"
